<resources>
    <string name="app_name">ADS2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Associate Android Developer</string>
    <string name="nav_header_subtitle">suhail.aijaz@digimantra.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_logout">Log Out</string>
    <string name="menu_privacyText">Privacy and Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Privacy fragment</string>
    <string name="menu_contacttext">Contact Us </string>
</resources>